# pseudoFAT

./: CMakeLists.txt  DirCluster.c  DirCluster.h  DirEntry.c  DirEntry.h  DirectoryEntry.c  DirectoryEntry.h  FATTable.c  FATTable.h  FATfileSystem.c  FATfileSystem.h  FileCluster.h  bitmap_operations.c  bitmap_operations.h  directory_operations.c  directory_operations.h  fread  functions.c  functions.h  iNodeFileSystem.c  iNodeFileSystem.h  main.c  readme.md  sizes.h
